Fix on the unreadable png file.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -196,7 +196,7 @@ p {
     display: none;
     overflow: hidden;
     background-color: #f1f1f1;
-    background-image: url(../assets/images/schema.png);
+    background-image: url(../assets/images/schema.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size:contain;
